# hoqus

./: Cplx.hs  Dirac.hs  Gates.hs  Hoqus.hs  LICENSE  LinAlg.hs  MtxFun.hs  MtxOrd.hs  README.md  hoqus.cabal
Hoqus/: Dirac.hs  Fidelity.hs  Gates.hs  MtxFun.hs  MtxOrd.hs
alternative/: DiracLists.hs
examples/: README.md  README.tex.md  ex01_ket_proj.hs  ex01_overlap.hs  ex02_kets.hs  ex02_overlap.hs
