Name:                hoqus
Version:             0.1
Description:         Quantum mathematics in Haskell
License:             MIT
License-file:        LICENSE
Author:              Jarek Miszczak
Maintainer:          miszczak@iitis.pl
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Build-Depends:     base >= 3 && < 5 
  Build-Depends:     hmatrix >= 0.18.1.0
  Exposed-modules:   Hoqus.Dirac, Hoqus.Gates, Hoqus.MtxFun, Hoqus.MtxOrd
  ghc-options:       -Wall
--  hs-source-dirs:     src

--Executable ex01_ket_proj
--  main-is:          ex01_ket_proj.hs
--  hs-source-dirs:   examples
--  other-modules:    Hoqus
